minijinja/tests/snapshots/test_lexer__lexer@line-comment.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "## this is a comment\n## that shall disappear entirely\n<ul>\n  # for item in seq\n    <li>{{ item }}</li>  ## this is another line comment\n\n  # endfor\n</ul>\n## trailing comment"
input_file: minijinja/tests/lexer-inputs/line-comment.txt
---
TemplateData("<ul>\n")
  "<ul>\n"
BlockStart
  "#"
Ident("for")
  "for"
Ident("item")
  "item"
Ident("in")
  "in"
Ident("seq")
  "seq"
BlockEnd
  "\n"
TemplateData("    <li>")
  "    <li>"
VariableStart
  "{{"
Ident("item")
  "item"
VariableEnd
  "}}"
TemplateData("</li>  ")
  "</li>  "
TemplateData("\n")
  "\n"
BlockStart
  "#"
Ident("endfor")
  "endfor"
BlockEnd
  "\n"
TemplateData("</ul>\n")
  "</ul>\n"
