minijinja/tests/snapshots/test_lexer__lexer@loop.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "<ul>\n{% for item in sequence %}\n    <li>{{ item }}</li>\n{% endfor %}\n</ul>"
input_file: minijinja/tests/lexer-inputs/loop.txt
---
TemplateData("<ul>\n")
BlockStart(false)
Ident("for")
Ident("item")
Ident("in")
Ident("sequence")
BlockEnd(false)
TemplateData("\n    <li>")
VariableStart(false)
Ident("item")
VariableEnd(false)
TemplateData("</li>\n")
BlockStart(false)
Ident("endfor")
BlockEnd(false)
TemplateData("\n</ul>")

