minijinja/tests/snapshots/test_lexer__lexer@lstrip-blocks-comment.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "<ul>\n  {# for item in seq #}\n    <li>{{ item }}</li>\n  {# endfor #}\n</ul>"
input_file: minijinja/tests/lexer-inputs/lstrip-blocks-comment.txt
---
TemplateData("<ul>\n")
  "<ul>\n"
TemplateData("    <li>")
  "    <li>"
VariableStart
  "{{"
Ident("item")
  "item"
VariableEnd
  "}}"
TemplateData("</li>\n")
  "</li>\n"
TemplateData("</ul>")
  "</ul>"

