minijinja/tests/snapshots/test_lexer__lexer@raw.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "before {% raw %} this is a {{ raw }} {% block %} {% endraw %} after\n\nbefore {%- raw %} this is a {{ raw }} {% block %} {% endraw -%} after\n\nbefore {%- raw -%} this is a {{ raw }} {% block %} {%- endraw -%} after"
input_file: minijinja/tests/lexer-inputs/raw.txt
---
[
    TEMPLATE_DATA("before "),
    TEMPLATE_DATA("{% raw %} this is a {{ raw }} {% block %} {% endraw %}"),
    TEMPLATE_DATA(" after\n\nbefore "),
    TEMPLATE_DATA("{%- raw %} this is a {{ raw }} {% block %} {% endraw -%}"),
    TEMPLATE_DATA(" after\n\nbefore "),
    TEMPLATE_DATA("{%- raw -%} this is a {{ raw }} {% block %} {%- endraw -%}"),
    TEMPLATE_DATA(" after"),
]
